fix filter mode vertical spacing, add column filter layout

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -57,7 +57,8 @@
   flex-direction: column;
   @include for-phone-only {
     overflow-y: scroll;
-    // height: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
